# senjun-images

./: README.md
.github/workflows/: c-cpp.yml
cpp/: Dockerfile  build_module.sh
cpp/playground/: run-playground.sh
cpp/practice/: run-practice.sh
cpp/task/: CMakeLists.txt  run-task.sh  test_helpers.cppm  test_helpers.h  ut.cppm
cpp_experiments/: Dockerfile
golang/: Dockerfile
golang/playground/: run-playground.sh
golang/practice/: run-practice.sh
golang/task/: run-task.sh
haskell/: Dockerfile  Makefile  README.md  config  package.yaml  user-code.cabal
haskell/playground/: run-playground.sh
haskell/task/: MachineFormatter.hs  run-task.sh
haskell/tests/new_approach/: user_task  user_task_tests
haskell/tests/new_approach/task/: user_task_test
haskell/tests/old_approach/: user_task_tests
haskell/user-code/: user-code.cabal
haskell/user-code/app/: UserCode.hs
haskell/user-code/test/: Main.hs
python/: Dockerfile
python/task/: run-task.sh
rust/: Dockerfile
rust/playground/: run-playground.sh
rust/task/: run-task.sh
